	- WaterClipFlag
	- PlayerHUDLayout
	- RoomEventOutput
	- CustomCacheTag
	- EvaluateStatStage
* Room:
	- GetWallColor()
* Isaac:
	- GetAllowedDoorsMaskForRoomShape: Returns a DoorMask representing all DoorSlots that are allowed for the given RoomShape.
	- UnClearChallenge(challenge id): sets the target challenge id as not cleared. Not recommended with vanilla ones, it should still work tho!
* Options:
	- AimLockEnabled
	- AscentVoiceOver
	- BossHPOnBottom
	- Brightness
	- Contrast
	- Exposure
	- OnlineChatEnabled (read-only)
	- OnlineChatFilterEnabled (read-only)
	- OnlineColorSet (read-only)
	- OnlineHUD (read-only)
	- OnlineInputDelay (read-only)
	- OnlinePlayerOpacity (read-only)
	- OnlinePlayerVolume (read-only)
	- PreventModUpdates (now read-only)
	- StreamerMode (read-only)
	- TouchMode
	- WindowHeight
	- WindowPosX
	- WindowPosY
	- WindowWidth
* Added the following customtag for items.xml:
	* "noexpansionpack" - Prevents the active item (with 1 or 2 max charges) from being picked by Expansion Pack trinket.
* Added the following customcache for items.xml:
	* "healthtype" - Re-evaluate the player's HealthType
	* "tearscap" - Re-evaluate the player's maximum tears-per-second before flat modifiers and multipliers. Triggers a CACHE_FIREDELAY eval when changed.
	* "statmultiplier" - Re-evaluate the multiplier on the player's stats gained from items (the same one used for Cracked Crown and Tainted Bethany). Triggers standard cache evals for the relevant stats when changed.
* Stats can now be assigned to collectibles, trinkets and nulls in items.xml! These stat modifications will behave identically to those from most vanilla items that modify those stats.
	- For example:
		tears="0.7" will behave like Sad Onion
		flattears="0.5" will behave like Pisces
		damage="1" will behave like Pentagram
		flatdamage="2" will behave like Curved Horn
	- Supported: tears, flattears, tearsmult, damage, flatdamage, damagemult, shotspeed, speed, range, luck